--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+/* 
+.App {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  user-select: none;
+  background: #ecf0f3;
+  flex-direction: column;
+} */
